infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopmicro
  labels:
    name: shopmicro
    app.kubernetes.io/name: shopmicro
    app.kubernetes.io/instance: production
