infrastructure/kubernetes/alloy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alloy-deployment
  namespace: shopmicro
  labels:
    app: alloy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
    spec:
      serviceAccountName: alloy
      containers:
      - name: alloy
        image: grafana/alloy:latest
        args:
          - "run"
          - "/etc/alloy/config.alloy"
        ports:
        - name: http-alloy
          containerPort: 12345
        - name: otlp-grpc
          containerPort: 4317
        - name: otlp-http
          containerPort: 4318
        resources:
          requests:
            cpu: "150m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
        volumeMounts:
        - name: config
          mountPath: /etc/alloy
      volumes:
      - name: config
        configMap:
          name: alloy-config
---
# A service is needed to expose the OTLP ports to other pods.
apiVersion: v1
kind: Service
metadata:
  name: alloy
  namespace: shopmicro
spec:
  selector:
    app: alloy
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
