infrastructure/kubernetes/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki-deployment
  namespace: shopmicro
  labels:
    app: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:2.9.5
        args:
          - "-config.file=/etc/loki/loki.yaml"
        ports:
        - name: http-loki
          containerPort: 3100
        resources:
          requests:
            memory: "256Mi"
            cpu: "150m"
          limits:
            memory: "512Mi"
            cpu: "250m"
        volumeMounts:
        - name: config
          mountPath: /etc/loki
        - name: storage
          mountPath: /loki
      volumes:
      - name: config
        configMap:
          name: loki-config
      - name: storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: shopmicro
  labels:
    app: loki
spec:
  selector:
    app: loki
  ports:
  - name: http-loki
    port: 3100
    targetPort: 3100
